# mogs_video_data

./: .gitignore  .travis.yml  CMakeLists.txt  MoGS_Video_DataConfig.cmake.in  README.md  auto_install.sh  config_Video_data.h.in
include/: config_Video_data.h  imgconvert.h  list_choose.h  mogs_qt_list_point.h  mogs_qt_list_video.h  mogs_qt_video_scene.h  mogs_video_widget.h  qt_get_point_name.h  qt_rep_name.h  video_extracted_data.h  video_extractor.h  video_interface.h
qt_files/: list_choose.pro  list_choose.ui  list_repo.pro  list_repo.ui  mogs_video_widget.ui  qt_get_name_point.pro  qt_get_point_name.ui  qt_rep_name.pro  qt_rep_name.ui  test.pro
src/: imgconvert.cpp  list_choose.cpp  main.cpp  mogs_qt_list_point.cpp  mogs_qt_list_video.cpp  mogs_qt_video_scene.cpp  mogs_video_widget.cpp  qt_get_point_name.cpp  qt_rep_name.cpp  video_extracted_data.cpp  video_extractor.cpp  video_interface.cpp
src/libopentld/: CMakeLists.txt
tools/: mogs_video_completion.sh
tools/DTD/: project_video_tracking.dtd
tools/templates/: mogs_project_video_tracking.xml
tools/xsd/: project_video_tracking.xsd
